<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_general"
        android:icon="@drawable/icon_general"
        android:title="@string/general" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/products"
        android:title="@string/products" />

    <item
        android:id="@+id/navigation_service"
        android:icon="@drawable/icon_service"
        android:title="@string/service" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/basket"
        android:title="@string/basket" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>
